Add Packetization Implementation for H265 codec (#20)
* Added H265 functionalities for packetization

* added changes upto 91% covered branch

* Changed some unit tests to make 100% coverage

* Removed print statements

* Address Rahul's code review feedback

* Formatted files with uncrustify

* Removed main.sh

* Followed MISRA guidelines

* First commit for depacketization

* Added header file for depacketization

* Added depacketizer's unit tets

* Addressed comments till Aggregation

* Added setNalu function for Depacketization

* Added rtpFilePaths

* removed donl from rtp

* Resolved buffer overflow error from rtp

* Updated fragmentation function in packetization

* Removed unnecessary comments from depacketization

* Fixed depacketizer issue

* Removed uncrustify file

* Removed stdio.h  header

* Converted return type of singleNalu to void

* Removed reassembly buffer from fragmentation

* Simplified aggregation function of depacketization

* Added const for minSize variable

* 100% coverage report

* Indent of comments

* Applied uncrustify

* Replaced hexadecimal constants with macros

* Add brief to H265 test cases

---------

Co-authored-by: Ubuntu <ubuntu@ip-172-31-19-215.us-west-2.compute.internal>
Co-authored-by: Sranix <sranix@amazon.com>
Co-authored-by: Tiya Jain <tiyajain2002@gmail.com>
Co-authored-by: Tiya Jain <89742029+t2-g@users.noreply.github.com>

--- a/test/unit-test/CMakeLists.txt
+++ b/test/unit-test/CMakeLists.txt
@@ -87,6 +87,7 @@ include( ${MODULE_ROOT_DIR}/test/unit-test/cmock/create_test.cmake )
 include( ${UNIT_TEST_DIR}/g711/ut.cmake )
 include( ${UNIT_TEST_DIR}/opus/ut.cmake )
 include( ${UNIT_TEST_DIR}/h264/ut.cmake )
+include( ${UNIT_TEST_DIR}/h265/ut.cmake )
 include( ${UNIT_TEST_DIR}/vp8/ut.cmake )
 include( ${UNIT_TEST_DIR}/rtp_packet_queue/ut.cmake )
 include( ${UNIT_TEST_DIR}/rtp_api/ut.cmake )
@@ -100,6 +101,7 @@ add_custom_target( coverage
     g711_utest
     opus_utest
     h264_utest
+    h265_utest
     vp8_utest
     rtp_packet_queue_utest
     rtp_api_utest
